--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "![Design preview for the Age calculator app coding challenge](./design/desktop-preview.jpg)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile:sass": "sass ./app/src/main.scss ./app/public/styles.css -w"
   },
   "keywords": [],
   "author": "",
@@ -12,5 +12,9 @@
   "devDependencies": {
     "tailwindcss": "^3.3.1",
     "typescript": "^5.0.4"
+  },
+  "dependencies": {
+    "dart-sass": "^1.25.0",
+    "sass": "^1.61.0"
   }
 }
