--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "dart-sass": "^1.25.0",
-    "sass": "^1.61.0"
+    "sass": "^1.61.0",
+    "typescript": "^5.0.4"
   }
 }
